# marble

./: CMakeLists.txt
data/: CMakeLists.txt
src/lib/marble/: AbstractDataPluginItem.cpp  AbstractDataPluginItem.h  AbstractDataPluginModel.cpp  AbstractDataPluginModel.h  CMakeLists.txt  GLTextureMapper.cpp  GeoGraphicsScene.cpp  GeoGraphicsScene.h  GnomonicScanlineTextureMapper.cpp  GnomonicScanlineTextureMapper.h  LayerManager.cpp  MapViewWidget.cpp  MapViewWidget.ui  MarbleGlobal.h  MarbleMap.h  MarbleWidget.cpp  MarbleWidget.h  PlacemarkLayout.cpp  PlacemarkLayout.h  ServerLayout.cpp  TourPlayback.cpp  ViewportParams.cpp  ViewportParams.h
src/lib/marble/layers/: GeometryLayer.cpp  GeometryLayer.h  PlacemarkLayer.cpp  PlacemarkLayer.h  PopupLayer.cpp  PopupLayer.h  TextureLayer.cpp  TextureLayer.h
src/lib/marble/projections/: AbstractProjection.h  EquirectProjection.cpp  EquirectProjection.h  GnomonicProjection.cpp  GnomonicProjection.h  MercatorProjection.cpp  MercatorProjection.h  SphericalProjection.cpp  SphericalProjection.h
src/plugins/declarative/: DeclarativeDataPluginModel.cpp  DeclarativeDataPluginModel.h
src/plugins/render/: CMakeLists.txt
src/plugins/render/earthquake/: EarthquakeModel.cpp  EarthquakeModel.h
src/plugins/render/foursquare/: FoursquareModel.cpp  FoursquareModel.h
src/plugins/render/panoramio/: CMakeLists.txt  PanoramioModel.cpp  PanoramioModel.h  PanoramioParser.cpp  PanoramioParser.h  PanoramioPlugin.cpp  PanoramioPlugin.h  jsonparser.cpp  jsonparser.h
tests/: AbstractDataPluginModelTest.cpp
(+32 files in other folders)
